JumpScript/tests/baselines/reference/allowSyntheticDefaultImports6.errors.txt
tests/cases/compiler/a.jump(1,8): error TS1192: Module '"tests/cases/compiler/b"' has no default export.


==== tests/cases/compiler/b.d.jump (0 errors) ====
    declare class Foo {
    	member: string;
    }
    export = Foo;
    
==== tests/cases/compiler/a.jump (1 errors) ====
    import Foo from "./b";
           ~~~
!!! error TS1192: Module '"tests/cases/compiler/b"' has no default export.
    export var x = new Foo();
    